AE: set number of QS rows (2/2)
Change-Id: Id0226ad0235651fdaf42f258f0db20b72e19fd49
Signed-off-by: Ali B <abittin@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -767,6 +767,9 @@
 
     <!-- QS Tiles Columns -->
     <string name="qs_num_columns_title">Number of QS tiles per row</string>
-    <string name="qs_num_columns_showing">%1$s tiles per row showing</string>
+    <string name="qs_num_columns_showing">Showing %1$s tiles per row</string>
 
+    <!-- QS Tiles Rows -->
+    <string name="qs_num_rows_title">Number of QS rows</string>
+    <string name="qs_num_rows_showing">Showing %1$s rows</string>
 </resources>
