--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -767,6 +767,9 @@
 
     <!-- QS Tiles Columns -->
     <string name="qs_num_columns_title">Number of QS tiles per row</string>
-    <string name="qs_num_columns_showing">%1$s tiles per row showing</string>
+    <string name="qs_num_columns_showing">%1$s tiles per row are shown</string>
 
+    <!-- QS Tiles Rows -->
+    <string name="qs_num_rows_title">Number of QS rows</string>
+    <string name="qs_num_rows_showing">%1$s rows are shown</string>
 </resources>
