Update FR translation
Change-Id: I7d75625e2a228c2db1a30399f4febb2e5109f661

--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -794,4 +794,7 @@
     <!-- Status bar header font style -->
     <string name="status_bar_header_font_style_title">Style de la police de l\'en-tête</string>
 
+    <!-- QS Tiles Columns -->
+    <string name="qs_num_columns_title">Nombre de tuiles des réglages rapide par rangée</string>
+    <string name="qs_num_columns_showing">%1$s tuiles par rangée affichées</string>
 </resources>
