--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -284,7 +284,7 @@
     <string name="recents_full_screen_date_summary">Shows date at the top while in fullscreen</string>
 
     <!-- Weather settings -->
-    <string name="weahter_lockscreen_category">Lock screen weather options</string>
+    <string name="weather_lockscreen_category">Lock screen weather options</string>
     <string name="weather_cat_notifications_title">Notifications</string>
     <string name="weather_settings_title">LockClock settings</string>
     <string name="weather_settings_summary">Configure location for weather widget and other settings</string>
@@ -758,9 +758,12 @@
 
     <!-- Hide Lockscreen clock, date & alarm -->
     <string name="hide_lockscreen_items_title">Lockscreen items</string>
-    <string name="hide_lockscreen_clock_title">Show lockscreen clock</string>
-    <string name="hide_lockscreen_date_title">Show lockscreen date</string>
-    <string name="hide_lockscreen_alarm_title">Show lockscreen alarm</string>
+    <string name="hide_lockscreen_clock_title">Clock</string>
+    <string name="hide_lockscreen_clock_summary">Show lockscreen clock</string>
+    <string name="hide_lockscreen_date_title">Date</string>
+    <string name="hide_lockscreen_date_summary">Show lockscreen date</string>
+    <string name="hide_lockscreen_alarm_title">Alarm</string>
+    <string name="hide_lockscreen_alarm_summary">Show lockscreen alarm</string>
 
     <!-- Status bar header font style -->
     <string name="status_bar_header_font_style_title">Header font style</string>
@@ -772,4 +775,15 @@
     <!-- QS Tiles Rows -->
     <string name="qs_num_rows_title">Number of QS rows</string>
     <string name="qs_num_rows_showing">%1$s rows are shown</string>
+
+    <!-- Lockscreen Colors -->
+    <string name="lockscreen_colors_title">Lockscreen colors</string>
+    <string name="lockscreen_owner_info_color">Owner info</string>
+    <string name="lockscreen_alarm_color">Alarm</string>
+    <string name="lockscreen_clock_color">Clock</string>
+    <string name="lockscreen_clock_date_color">Date</string>
+    <string name="lockscreen_colors_reset_title">Reset lockscreen colors</string>
+    <string name="lockscreen_colors_reset_message">Are you sure you want to reset these colors to default?</string>
+    <string name="yes">YES</string>
+
 </resources>
