AICP French Translation (update) : packages_apps_AicpExtras
Change-Id: I0ef02565fe27e07965d17fce3360ccfb4962346f

--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -156,9 +156,9 @@
     <string name="status_bar_carrier_size">Taille du texte du libellé opérateur</string>
     <string name="show_carrier_title">Libellé opérateur</string>
     <string name="show_carrier_disabled">Désactivé</string>
-    <string name="show_carrier_keyguard">Écran de déverrouillage uniquement</string>
-    <string name="show_carrier_statusbar">Barre d\'état uniquement</string>
-    <string name="show_carrier_enabled">Sur l\'écran de déverrouillage et la barre d\'état</string>
+    <string name="show_carrier_keyguard">Écran de déverrouillage</string>
+    <string name="show_carrier_statusbar">Barre d\'état</string>
+    <string name="show_carrier_enabled">Sur les deux</string>
     <string name="status_bar_carrier_position">Position du libellé opérateur</string>
     <string name="status_bar_carrier_font_style_title">Type de la police</string>
 
@@ -790,6 +790,7 @@
     <string name="hide_lockscreen_items_title">Éléments affichés</string>
     <string name="hide_lockscreen_clock_title">Afficher l\'horloge sur l\'écran de déverrouillage</string>
     <string name="hide_lockscreen_date_title">Afficher la date sur l\'écran de déverrouillage</string>
+    <string name="hide_lockscreen_alarm_title">Afficher l\'alarme sur l\'écran de déverrouillage</string>
 
     <!-- Status bar header font style -->
     <string name="status_bar_header_font_style_title">Style de la police de l\'en-tête</string>
